syntax = "proto3";
package api.hello.v1;
option go_package = "api/hello/v1";

import "google/api/annotations.proto";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  UserInfo info = 3;
}

message UserInfo {
  string username = 1;
  string phone = 2;
  string email = 3;
}

message CreateUserResponse{
  bool success = 1;
}

message GetUserRequest{
  //@gotags: uri:"username"
  string username = 1;
}

message GetUserResponse{
  string username = 1;
}

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/hello/v1"
      body: "*"
    };
  }
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/hello/v1/user"
      body: "*"
    };
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/hello/v1/:username"
    };
  }
}